cmake_minimum_required(VERSION 3.0)
project(dlancher)
aux_source_directory(examples DIR_EXAMPLES)
message("dlancher example files: ${DIR_EXAMPLES}")

find_package(CUDA)
if(CUDA_FOUND)
    message("cuda include path: ${CUDA_INCLUDE_DIRS}")
    aux_source_directory(cuda DIR_SRCS)
    foreach(EXAMPLE ${DIR_EXAMPLES})
        string(REGEX REPLACE ".+/(.+)\\..*" "\\1" FILE_EXAMPLE ${EXAMPLE})
        cuda_add_executable(test_${FILE_EXAMPLE} ${EXAMPLE} ${DIR_SRCS})
    endforeach()
    message("dlancher source files: ${DIR_SRCS}")
    cuda_add_library(dlancher STATIC ${DIR_SRCS})
endif(CUDA_FOUND)
